--- a/semana 4/Taller DWR CSS.html
+++ b/semana 4/Taller DWR CSS.html
@@ -9,7 +9,7 @@
     <!-- Icono favicon -->
     <link rel="shortcut icon" href="./img/incap.png" type="image/x-icon">
     <!-- Link hoja de estilo CSS -->
-    <link rel="stylesheet" href="./css/css_responsive.css">
+    <link rel="stylesheet" href="./css/css responsive.css">
 </head>
 <body> 
     <div id="grid-container">
@@ -46,17 +46,17 @@
             <input type="text"placeholder="buscar aqui">
          </div>
             <!--SECCION REGISTRO USUARIO -->
-            <div id="reguser"></div>
+            <div id="reguser">
             <i class="classfas fa user"></i>
              <a href="#">INGRESE</a> 
          </div>
          </nav>
                 <!--SECCION DE CONTENIDO PRINCIPAL <SELECTION>  -->
                      <CENTER>
-                           <seleccion id="main">
+                           <section id="main">
                             <figure>
                                 <img src="./img/HTML5.png" alt=""width="100"height="100">
-                                <img src="./img/css3.png" alt="">
+                                <img src="./img/css3.png" alt="" width="100"height="100">
                                 <img src="./img/mysql-logo2.jpg" alt=""width="100"height="100">
                                 <img src="./img/JAVASCRIPT.png" alt=""width="100"height="100">
                                 <img src="./img/php.png" alt=""width="100"height="100">
@@ -87,7 +87,7 @@
                                 <h1>GASTRONOMIA</h1>
                                 <a href="https://www.incap.edu.co/programas/auxiliar-en-panaderia-y-pasteleria.html"><img src="./img/logo gastronomia.png" alt=""width="100"height="100"><a>   
                              </article>
-                           </seleccion>
+                           </section>
                     </CENTER>
                     <!--SECCION BARRA SUPERIOR <asaide>-->
                         <asaide id="sidebar">
